--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2>A Plan for Every Person's Need</h2>
+    <p>Simple and affordable recipe plans for you and your family.</p>
 
 
-    <h3>Chihuahua</h3>
+    <h3>Indian Cuisine</h3>
     <h2>Free</h2>
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
@@ -140,7 +140,7 @@
     <button type="button">Sign Up</button>
 
 
-    <h3>Labrador</h3>
+    <h3>Continental Cuisine</h3>
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
@@ -148,7 +148,7 @@
     <button type="button">Sign Up</button>
 
 
-    <h3>Mastiff</h3>
+    <h3>Chinese</h3>
     <h2>$99 / mo</h2>
     <p>Pirority Listing</p>
     <p>Unlimited Matches</p>
