--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/TechCrunch.png" alt="tc-logo">
+    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-img" src="images/tnw.png" alt="tnw-logo">
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-img"src="images/mashable.png" alt="mashable-logo">
@@ -128,34 +128,47 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Person's Need</h2>
-    <p>Simple and affordable recipe plans for you and your family.</p>
-
-
-    <h3>Indian Cuisine</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Continental Cuisine</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Chinese</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+    <h2>Cuisines</h2>
+    <p>Simple and affordable recipe plans for you and your family</p>
+    <div class="row">
+        <div class="col pricing-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Indian</h3>
+            </div>
+            <div class="card-body">
+              <h5>North-India, South-India</h5>
+              <p class="margin2"> Authentic and Traditional Food Recipes from India.</p>
+              <a href="#" class="btn btn-outline-primary"> Try it</a>
+            </div>
+          </div>
+        </div>
+        <div class="col pricing-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Continental</h3>
+            </div>
+            <div class="card-body">
+              <h5>Europe, France, Italy</h5>
+              <p> Stylish and Premium Food Recipes from the Continent of Europe.</p>
+              <a href="#" class="btn btn-primary"> Try it</a>
+            </div>
+          </div>
+        </div>
+        <di class="col pricing-col col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3>Oriental</h3>
+            </div>
+            <div class="card-body">
+              <h5>Japan, China, Thailand</h5>
+              <p> The Hot and Spicy traditional Food Recipes from East-Asian Countries.</p>
+              <a href="#" class="btn btn-primary"> Try it</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 
@@ -163,9 +176,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Chef within Youself Today.</h3>
-    <button type="button" class="btn btn-dark">Vegetarian</button>
-    <button type="button" class="btn btn-outline-light">Non-Vegetarian</button>
+    <h3 >Find the True Chef within Youself Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg down cta1" ><span class="fab fa-apple hj"></span>Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg down cta1"><span class="fa-brands fa-google-play hj"> </span>Download</button>
 
   </section>
 
